data/derived/comb/progs/unify/prog7181.ml.out
Characters 29-42:
  let _ = assoc (-1,"william",[("ranjit",84);("william",23);("moose",44)]);;
                               ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
